style.css
* {
  box-sizing: border-box;
}
body {
  display: grid;
  grid-template-columns: 15% auto 15%;
  margin: 0;
  overflow-x: hidden;
}
.principal-container {
  position: static;
  z-index: -2;
  display: grid;
  grid-column: 2;
  height: 100%;
}

/* HOME */

.background-image {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100%;
  object-fit: cover;
  object-position: top;
  z-index: -1;
  filter: brightness(35%);
}
.home {
  position: relative;
  width: 100%;
  min-height: 90vh;
  display: flex;
  flex-direction: column;
  align-items: end;
  justify-content: center;
  text-align: center;
  color: white;
  overflow: hidden;
}
.presentation-ph {
  position: absolute;
  width: 50%;
  display: flex;
  flex-direction: column;
  margin-top: 70px;
}
.photographer-name {
  text-align: center;
  font-size: 42px;
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
  margin-top: 70px;
  margin-bottom: 10px;
  line-height: 1.2;
}
.photographer-description {
  margin-bottom: 85px;
  justify-items: center;
}
.photographer-description > p:nth-child(1) {
  font-family: "Playfair Display", serif;
  font-weight: 300;
  font-style: normal;
  line-height: 1.6;
  text-align: center;
  font-size: 18px;
  max-width: 1100px;
}
.photographer-description > p:nth-child(2) {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
  text-align: center;
  color: white;
  font-size: 14px;
}

/* GALLERY */

.gallery-container {
  width: 100%;
  height: auto;
  display: grid;
  gap: 2px;
}
.gallery-container img {
  display: block;
}
.photo-container {
  width: 100%;
  overflow: hidden;
  position: relative;
  border: 5px solid gray;
  box-sizing: border-box;
}
.photo-container img {
  width: 100%;
  height: auto;
  object-fit: cover;
  transition: transform 1.4s ease;
}
.photo-container:hover img {
  transform: scale(1.1);
}
.photo-container1 {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 100%;
  overflow: hidden;
  position: relative;
}
.photo-1 {
  max-width: 100%;
  height: auto;
  object-fit: contain;
  aspect-ratio: 1380 / 914;
}
.line1-gallery {
  display: grid;
  grid-template-columns: calc(50% - 1px) calc(50% - 1px);
  gap: 2px;
}
.photo-container2,
.photo-container3 {
  width: 100%;
}
.photo-2 {
  aspect-ratio: 740 / 987;
}
.photo-3 {
  aspect-ratio: 740 / 987;
}
.photo-container4 {
  width: 100%;
}
.photo-4 {
  aspect-ratio: 1380 / 920;
}
.photo-container5 {
  width: 100%;
}
.photo-5 {
  aspect-ratio: 1800 / 1013;
}
.photo-container6 {
  width: 100%;
}
.photo-6 {
  aspect-ratio: 1380 / 918;
}
.line2-gallery {
  display: grid;
  grid-template-columns: calc(50% - 1px) calc(50% - 1px);
  gap: 2px;
}
.photo-container7,
.photo-container8 {
  width: 100%;
}
.photo-7 {
  aspect-ratio: 740 / 1110;
}
.photo-8 {
  aspect-ratio: 740 / 1110;
}

/* SERVICES */

.services-section {
  max-width: 100%;
}
.sessions-title {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
  font-size: 35px;
  margin-top: 110px;
  margin-bottom: 30px;
  text-transform: uppercase;
  letter-spacing: 2px;
  color: white;
}
.services-container-general {
  justify-items: center;
}
.services-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr;
  gap: 10px;
  justify-items: center;
  width: 100%;
  align-items: stretch;
}
.service-box {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  position: relative;
  background: #333;
  width: 90%;
  border: 0.5px solid gray;
  border-radius: 10px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  padding: 10px;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.service-box:hover {
  transform: translateY(-10px);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
}
.package-title {
  position: relative;
  display: flex;
  height: 20%;
  max-width: 100%;
  justify-content: center;
  align-items: center;
  padding: 20px;
  margin-bottom: 50px;
  border: 1px solid gray;
  border-radius: 10px;
}
.package-title h1 {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
  position: relative;
  color: white;
  font-size: larger;
}
.service-box div p {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: normal;
  font-size: smaller;
  width: 90%;
  margin-left: 50px;
  justify-self: center;
  color: white;
}

/* CONTACT FORM */

.form-container {
  display: flex;
  justify-content: center;
  padding: 70px 40px;
}
.contact-form {
  width: 100%;
  max-width: 450px;
  padding: 30px;
  background: #f8f8f8;
  border: 1px solid #ccc;
  border-radius: 10px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  gap: 15px;
  text-align: center;
}
.contact-form h1 {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
  font-size: 28px;
  margin-bottom: 5px;
  color: #333;
}
.contact-form p {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: normal;
  font-size: smaller;
  color: #666;
  margin-bottom: 15px;
}
.contact-form input,
.contact-form textarea {
  font-family: "Poppins", sans-serif;
  width: 100%;
  padding: 8px;
  border: 1px solid #ddd;
  border-radius: 5px;
  font-size: smaller;
  background-color: white;
  color: #333;
  transition: border 0.3s ease;
}
.contact-form input:focus,
.contact-form textarea:focus {
  font-family: "Poppins", sans-serif;
  border-color: #666;
  outline: none;
}
.form-row {
  display: flex;
  gap: 10px;
}
.form-row input {
  flex: 1;
}
.contact-form button {
  font-family: "Poppins", sans-serif;
  background: #333;
  color: white;
  border: none;
  padding: 12px;
  border-radius: 5px;
  font-size: 16px;
  cursor: pointer;
  transition: background 0.3s ease, transform 0.2s ease;
}
.contact-form button:hover {
  background: #555;
  transform: scale(1.03);
}

/* BUTTON WHATSAPP */

.btn-whatsApp {
  font-family: "Poppins", sans-serif;
  position: fixed;
  right: 2%;
  bottom: 4%;
  width: 150px;
  height: 35px;
  color: #fff;
  background-color: #333;
  border-radius: 5px;
  cursor: pointer;
  z-index: 2;
  transition: color 0.3s ease, background-color 0.3s ease;
}
.btn-whatsApp:hover {
  color: #25d366;
  background-color: #111;
}

/* FOOTER */

footer {
  font-family: "Poppins", sans-serif;
  grid-column: 1 / -1;
  text-align: center;
  bottom: 0;
  left: 0;
  right: 0;
  max-width: 100%;
  margin: 0px;
  text-align: center;
  background-color: #333;
  color: white;
  padding: 40px;
}
footer a {
  font-size: 14px;
  font-weight: bold;
  color: white;
  text-decoration: none;
  margin-bottom: 10px;
}
footer a:hover {
  color: #00a376;
}
footer p {
  font-size: 12px;
  line-height: 1.6;
  margin: 5px 0;
}

@media (max-width: 600px) {
  .form-row {
    flex-direction: column;
    gap: 10px;
  }
  .photographer-description > p:nth-child(1) {
    font-size: 15px;
  }
  .photographer-description > p:nth-child(2) {
    font-size: 13px;
    margin-top: 20px;
  }
  .form-container {
    padding: 70px 0px;
  }
  .contact-container {
    margin-bottom: 20px;
  }
  .contact-container p {
    width: 90%;
    font-size: 13px;
  }
  .contact-form {
    width: 100%;
    padding: 20px;
  }
  .contact-form h1 {
    margin-top: 5px;
  }
}
@media (max-width: 767px) {
  .background-image {
    height: 100dvh;
  }
}
@media (max-width: 900px) {
  body {
    grid-template-columns: 5% auto 5%;
  }
  .home {
    margin-top: 40px;
    min-height: 33vh;
  }
  .presentation-ph {
    width: 70%;
    margin-top: 0%;
  }
  .photographer-name {
    font-size: 35px;
    margin: 0%;
  }
  .photographer-description {
    margin: 0%;
    text-align: center;
  }
  .photographer-description > p:nth-child(1) {
    font-family: "Playfair Display", serif;
    font-weight: 300;
    font-style: normal;
    line-height: 1.6;
    text-align: center;
    font-size: 14px;
    max-width: 1100px;
  }
  .photographer-description > p:nth-child(2) {
    font-family: "Poppins", sans-serif;
    font-weight: 200;
    font-style: normal;
    text-align: center;
    color: white;
    font-size: 14px;
  }
  .services-container {
    max-height: 100%;
    max-width: 100%;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-auto-rows: 1fr;
    gap: 40px;
    align-items: stretch;
  }
  .sessions-title {
    text-align: center;
  }
  .service-box {
    display: flex;
    flex-direction: column;
    max-width: fit-content;
    box-sizing: border-box;
  }
  .service-box div p {
    font-size: 15px;
    margin: 10px 50px;
  }
  .service-box:hover {
    transform: scale(1.05);
    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
  }
  .sessions-title {
    letter-spacing: 3px;
  }
}

